--- a/lab_start/lab10-walkthrough03.html
+++ b/lab_start/lab10-walkthrough03.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/lab10.css">
     
-    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>    
+    <script	src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script	type="text/javascript">
+        window.jQuery ||
+                    document.write('<script	src="js/jquery-3.5.1.min.js"><\/script>');
+        </script>
     
 </head>
 <body class="form-body">
