chenged the virsion

--- a/Exercise 1-8/lab10-walkthrough07.html
+++ b/Exercise 1-8/lab10-walkthrough07.html
@@ -5,10 +5,11 @@
     <title>Lab 10</title>    
     <link rel="stylesheet" href="css/popover.css">
     
-    <script	src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script	src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script	type="text/javascript">
         window.jQuery ||
-                    document.write('<script	src="js/jquery-3.5.1.min.js"><\/script>');
+                    document.write('<script	src="js/jquery-3.1.1.min.js"><\/script>');
+        </script>
         </script>   
     <script type="text/javascript" language="javascript" src="js/lab10-walkthrough07.js"></script>      
     
